WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131421
Fix EFL Build errors since
r166975
.
https://bugs.webkit.org/show_bug.cgi?id=131421
Summary
Fix EFL Build errors since r166975.
Hyowon Kim
Reported
2014-04-08 20:18:52 PDT
EFL Build fix since
r166956
Attachments
Patch
(6.03 KB, patch)
2014-04-08 20:26 PDT
,
Hyowon Kim
no flags
Details
Formatted Diff
Diff
Patch
(5.99 KB, patch)
2014-04-08 20:43 PDT
,
Hyowon Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hyowon Kim
Comment 1
2014-04-08 20:26:27 PDT
Created
attachment 228930
[details]
Patch
Ryuan Choi
Comment 2
2014-04-08 20:30:56 PDT
Comment on
attachment 228930
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228930&action=review
> Source/WebKit2/PlatformEfl.cmake:189 > + WebProcess/WebPage/PageOverlayController.cpp
I think that this is not EFL specific
Gyuyoung Kim
Comment 3
2014-04-08 20:32:55 PDT
Comment on
attachment 228930
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228930&action=review
> Source/WebKit2/ChangeLog:3 > + EFL Build fix since
r166956
I don't know why
r166956
is involved in this build break. It looks the
r166956
make bmalloc.
http://trac.webkit.org/changeset/166956
Hyowon Kim
Comment 4
2014-04-08 20:35:43 PDT
(In reply to
comment #3
)
> (From update of
attachment 228930
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=228930&action=review
> > > Source/WebKit2/ChangeLog:3 > > + EFL Build fix since
r166956
> > I don't know why
r166956
is involved in this build break. > > It looks the
r166956
make bmalloc. > >
http://trac.webkit.org/changeset/166956
Sorry
r166975
.
Hyowon Kim
Comment 5
2014-04-08 20:43:54 PDT
Created
attachment 228932
[details]
Patch
Hyowon Kim
Comment 6
2014-04-08 20:58:32 PDT
I've filed a new
bug 131425
to add additional implementation for page overlay.
Gyuyoung Kim
Comment 7
2014-04-08 22:51:02 PDT
Comment on
attachment 228932
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228932&action=review
> Source/WebKit2/WebProcess/WebPage/TapHighlightController.cpp:73 > + m_webPage->uninstallPageOverlay(m_overlay, PageOverlay::FadeMode::Fade);
BTW, should we modify this line ?
Gyuyoung Kim
Comment 8
2014-04-08 22:51:29 PDT
Comment on
attachment 228932
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228932&action=review
> Source/WebKit2/WebProcess/WebPage/TapHighlightController.cpp:73 > + m_webPage->uninstallPageOverlay(m_overlay, PageOverlay::FadeMode::Fade);
BTW, should we modify this line ?
Hyowon Kim
Comment 9
2014-04-08 22:58:05 PDT
(In reply to
comment #8
)
> (From update of
attachment 228932
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=228932&action=review
> > > Source/WebKit2/WebProcess/WebPage/TapHighlightController.cpp:73 > > + m_webPage->uninstallPageOverlay(m_overlay, PageOverlay::FadeMode::Fade); > > BTW, should we modify this line ?
Yes, the second parameter was changed to enum class FadeMode.
WebKit Commit Bot
Comment 10
2014-04-08 23:26:03 PDT
Comment on
attachment 228932
[details]
Patch Clearing flags on attachment: 228932 Committed
r167002
: <
http://trac.webkit.org/changeset/167002
>
WebKit Commit Bot
Comment 11
2014-04-08 23:26:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug