Fix EFL Build errors since r166975. https://bugs.webkit.org/show_bug.cgi?id=131421

Patch by Hyowon Kim <hw1008.kim@samsung.com> on 2014-04-08
Reviewed by Gyuyoung Kim.

This patch is just for fixing EFL build errors.
The page overlay functionality is not working yet.

* CMakeLists.txt:
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:
(WebKit::CoordinatedDrawingArea::display):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::CoordinatedLayerTreeHost):
(WebKit::CoordinatedLayerTreeHost::paintLayerContents):
* WebProcess/WebPage/PageOverlayController.cpp:
* WebProcess/WebPage/TapHighlightController.cpp:
(WebKit::TapHighlightController::hideHighlight):

Canonical link: https://commits.webkit.org/149487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167002 268f45cc-cd09-0410-ab3c-d52691b4dbfc