Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp
@@ -607,14 +607,6 @@ void CoordinatedDrawingArea::display(UpdateInfo& updateInfo)
 
     for (size_t i = 0; i < rects.size(); ++i) {
         m_webPage->drawRect(*graphicsContext, rects[i]);
-
-        if (m_webPage->hasPageOverlay()) {
-            PageOverlayList& pageOverlays = m_webPage->pageOverlays();
-            PageOverlayList::iterator end = pageOverlays.end();
-            for (PageOverlayList::iterator it = pageOverlays.begin(); it != end; ++it)
-                m_webPage->drawPageOverlay(it->get(), *graphicsContext, rects[i]);
-        }
-
         updateInfo.updateRects.append(rects[i]);
     }
 
